css/all.sass
---
# Required front-matter (the dashes are enough)
---

@charset "utf-8"

//------------------------------------------------------------
//
//  Base
//
//------------------------------------------------------------

@import 'base/bourbon/bourbon'
@import 'base/normalize'
@import 'base/variables'
// @import 'base/syntax-highlighting'

//------------------------------------------------------------
//
//  Modules
//
//------------------------------------------------------------

@import 'modules/mixins'
@import 'modules/flickity'

//------------------------------------------------------------
//
//  Placeholders
//
//------------------------------------------------------------

%flexWidth
  display: flex
  padding-left: modular-scale(-5)
  padding-right: modular-scale(-5)
  width: 100%

%upperCasing
  text-transform: uppercase
//------------------------------------------------------------
//
//  Structure
//
//------------------------------------------------------------


@media screen and (min-width: 320px)
  \:root
    font-size: calc(16px + (24 - 16) * (100vw - 320px)/(1600 - 320))
    line-height: 1.5

@media screen and (min-width: 1000px)
  \:root
    font-size: 22px

@-ms-viewport
  width: device-width

*, *:before, *:after
  box-sizing: border-box

.wf-active body
  opacity: 1

body
  display: flex
  flex-direction: column
  font-family: Bodoni, 'Oranienbaum', serif
  opacity: 0
  background: map-get($colors, 'background')
  color: map-get($colors, 'text')

a
  text-decoration: none
  color: map-get($colors, 'text')


img, video, object, embed
  max-width: 100%
  height: auto !important

img
  -ms-interpolation-mode: bicubic
  display: block
  margin-left: auto
  margin-right: auto
  vertical-align: middle

nav ul
  margin: 0
  padding: 0
  list-style: none
  li
    display: inline-block

.caption
  width: 80%
  max-width: 1080px
  margin: auto
  text-align: center

.header
  @extend %flexWidth
  @extend %upperCasing
  align-items: center
  display: flex
  font-family: sans-serif
  justify-content: space-between
  overflow: hidden
  padding-top: modular-scale(1)
  position: fixed
  top: 0
  transition: top 250ms ease
  width: 100%
  z-index: 999
  h1
    font-weight: bold
    font-size: inherit
    letter-spacing: 0.05rem
    a
      box-shadow: inset 0 0 0 2px map-get($colors, 'text')
      padding: 0.1rem 1.5rem

.hide
  top: -80px

.main
  margin-top: 4em
  flex: 1 0 auto
  a
    cursor: alias
    box-shadow: inset 0 -0.04rem map-get($colors, 'text')
    transition: box-shadow 100ms ease
    &:hover
      box-shadow: inset 0 -1.7rem map-get($colors, 'text')
      color: map-get($colors, 'background')

.article
  @extend %upperCasing
  display: block
  margin-bottom: 5rem

#info
  text-align: center
  max-width: 1080px
  margin: 10em auto
  padding-left: modular-scale(-5)
  padding-right: modular-scale(-5)

.footer
  font-size: 0.8rem
  opacity: 0.5
  flex-shrink: 0
  max-width: 1080px
  margin: 1em auto
  padding-left: modular-scale(-5)
  padding-right: modular-scale(-5)


//------------------------------------------------------------
//
//  Carousel
//
//------------------------------------------------------------

.carousel
  max-width: 1080px
  margin: 0 auto

.carousel-cell
  width: 100%
  height: auto


@media only screen and (min-width: 768px)
  .header, .footer
    padding-left: 8vw
    padding-right: 8vw
  .main
    padding-left: 8vw
    padding-right: 8vw



// @media only screen and (min-width: 1030px)
// @media only screen and (min-width: 1240px)

